--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -90,8 +90,8 @@ li:not( .licover ),
 .button-webradio-new,
 .close-root,
 .coverart div,
-.cover-save,
-.edit,
+.covedit,
+.bkedit,
 .emptyadd i,
 .fa-arrow-left,
 .fa-arrow-right,
