--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1643,6 +1643,8 @@ i.map.disabled, .map.disabled i {
 	text-align: left !important;
 	color: var( --cw ) !important;
 	background: var( --cgl );
+	text-shadow: none !important;
+	box-shadow: 1px 1px 2px #000000;
 }
 #divcover .fa-coverart {
 	z-index: 102;
