--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1649,6 +1649,13 @@ i.map.disabled, .map.disabled i {
 #divcover .fa-coverart {
 	z-index: 102;
 }
+.bkedit.fa-coverart {
+	width: 24px !important;
+	height: 24px;
+	padding-left: 4px;
+	font-size: 16px !important;
+	line-height: 21px !important;
+}
 .contextmenu .fa-coverart {
 	position: relative;
 	margin: 0 2px 0 13px;
