--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -63,6 +63,7 @@
 .fa-lock-circle:before { content: "\f574" }
 .fa-microsd:before { content: "\f543" }
 .fa-minus-circle:before { content: "\f563" }
+.fa-mpd:before { content: "\f582" }
 .fa-music:before { content: "\f54C" }
 .fa-network:before { content: "\f551" }
 .fa-networks:before { content: "\f551" }
