--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -37,6 +37,7 @@
 .fa-arrow-left:before { content: "\f602" }
 .fa-arrow-right:before { content: "\f603" }
 .fa-artist:before { content: "\f556" }
+.fa-audiocd:before { content: "\f555" }
 .fa-bars:before { content: "\f51C" }
 .fa-bio:before { content: "\f515" }
 .fa-bookmark:before { content: "\f550" }
