--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -325,7 +325,11 @@ hr {
 }
 #infoFilename {
 	display: inline-block;
+	width: 100%;
 	margin-bottom: 10px;
+}
+#infoFilename code {
+	max-width: 90%;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
