--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -32,6 +32,7 @@
 .fa-arrow-left:before { content: "\f602" }
 .fa-arrow-right:before { content: "\f603" }
 .fa-artist:before { content: "\f556" }
+.fa-audiocd:before { content: "\f597" }
 .fa-bluetooth:before { content: "\f58C" }
 .fa-check:before { content: "\f51B" }
 .fa-chevron-down:before { content: "\f605" }
