--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -103,8 +103,8 @@
 .fa-previous:before { content: "\f501" }
 .fa-question-circle:before { content: "\f560" }
 .fa-radiofrance:before { content: "\f594" }
-.fa-radioparadise1:before {content: "\f595"; color: var( --cgl ); }
-.fa-radioparadise2:before { content: "\f596" }
+.fa-radioparadise:before {content: "\f595"; color: var( --cgl ); }
+.fa-radioparadise:after {content: "\f596"; margin-left: -17px; }
 .fa-random:before { content: "\f512" }
 .fa-reboot:before { content: "\f521" }
 .fa-redo:before { content: "\f524" }
