--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -106,7 +106,7 @@ li:not( .licover ),
 .mode,
 .rs-container,
 .submenu,
-#album:not( .albumradio ),
+#album:not( .albumgray ),
 #artist,
 #badge,
 #bar-bottom,
