--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -31,7 +31,7 @@
 .fa-arrow-left:before { content: "\f602" }
 .fa-arrow-right:before { content: "\f603" }
 .fa-artist:before { content: "\f556" }
-.fa-audiocd:before { content: "\f597" }
+.fa-audiocd:before { content: "\f58A" }
 .fa-bluetooth:before { content: "\f580" }
 .fa-check:before { content: "\f51B" }
 .fa-chevron-down:before { content: "\f605" }
@@ -73,7 +73,7 @@
 .fa-play-circle:before { content: "\f507" }
 .fa-plus:before { content: "\f519" }
 .fa-plus-circle:before { content: "\f564" }
-.fa-plus-r:before { content: "\f612" }
+.fa-plus-r:before { content: "\f588" }
 .fa-power:before { content: "\f520" }
 .fa-question-circle:before { content: "\f560" }
 .fa-reboot:before { content: "\f521" }
@@ -95,7 +95,7 @@
 .fa-sources:before { content: "\f538" }
 .fa-spotify:before { content: "\f593" }
 .fa-status:before { content: "\f50A" }
-.fa-system:before { content: "\f612" }
+.fa-system:before { content: "\f588" }
 .fa-times:before { content: "\f51A" }
 .fa-transmission:before { content: "\f586" }
 .fa-undo:before { content: "\f523" }
@@ -114,7 +114,7 @@
 .fa-wifi3:before { content: "\f597" }
 .fa-layer { position: absolute }
 .fa-layerlast { position: relative }
-.fa-audiocdplay:before { content: "\f597" }
+.fa-audiocdplay:before { content: "\f58A" }
 .fa-audiocdplay:after {
 	content: '\f503';
 	margin-left: -18px;
