--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -112,34 +112,6 @@
 .fa-wifi2:after { content: "\f59B"; color: var( --cga ); }
 .message .fa-wifi:before { font-size: 20px }
 
-.menu {
-	position: absolute;
-	margin-left: 40px;
-	width: 150px;
-	padding: 0;
-	background: var( --cg );
-	box-shadow: 4px 4px 10px #000000;
-	z-index: 11;
-}
-.menu a {
-	display: inline-block;
-	width: 100%;
-	margin: 0;
-	line-height: 40px;
-	font-size: 16px;
-	color: var( --cg75 );
-	border-top: 1px solid var( --cga ) !important;
-}
-.menu i {
-	width: 40px;
-	line-height: 40px;
-	vertical-align: -3px;
-	text-align: center;
-	font-size: 22px;
-	color: var( --cw );
-	text-shadow: 1px 1px 2px #000000;
-}
-
 #button-data {
 	position: fixed;
 	top: 0;
@@ -799,10 +771,6 @@ input:checked + .switchlabel.disabled:after {
 	.entries li:hover {
 		background: var( --cgd );
 	}
-	#menu a:hover {
-		color: var( --cw );
-		background-color: var( --cgl );
-	}
 	heading i,
 	.back,
 	.btn,
@@ -823,8 +791,7 @@ input:checked + .switchlabel.disabled:after {
 	#close,
 	#filetype,
 	#gpioimgtxt,
-	#help,
-	#menu {
+	#help {
 		cursor: pointer;
 	}
 	input:disabled {
