--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -96,6 +96,8 @@ li:not( .licover ),
 .fa-arrow-left,
 .fa-arrow-right,
 .fa-search,
+.infomessage img,
+.infomessage .tagpath,
 .index a,
 .infolabel i,
 .lib-mode,
@@ -120,8 +122,6 @@ li:not( .licover ),
 #colorcancel,
 #colorok,
 #coloroption,
-#infoMessage img,
-#infoMessage .tagpath,
 #liboptions,
 #lib-path a,
 #lib-search-close,
