--- a/srv/http/assets/css/addons.css
+++ b/srv/http/assets/css/addons.css
@@ -22,7 +22,7 @@
 /* 'addons' declared in <head> for cache busting */
 .fa {
 	display: inline-block;
-	font-family: enhance;
+	font-family: rern;
 	font-style: normal;
 }
 .fa-lg { font-size: 22px }
