--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -21,7 +21,7 @@
 }
 .fa {
 	display: inline-block;
-	font-family: enhance;
+	font-family: rern;
 	font-style: normal;
 }
 .fa-lg { font-size: 22px; line-height: 18px; }
