--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -831,6 +831,6 @@ input:checked + .switchlabel.disabled:after {
 		cursor: pointer;
 	}
 	input:disabled {
-		cursor: not-allowed;
+		cursor: not-allowed !important;
 	}
 }
