--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -46,6 +46,7 @@
 .fa-eye:before { content: "\f576" }
 .fa-features:before { content: "\f50B" }
 .fa-folder-cascade:before { content: "\f538" }
+.fa-folder-open:before { content: "\f541" }
 .fa-gear:before { content: "\f509" }
 .fa-gear-restore:before { content: "\f53C" }
 .fa-gears:before { content: "\f50A" }
