--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -39,6 +39,7 @@
 }
 .index a:hover,
 .fa-arrow-left:hover,
+.fa-arrow-right:hover,
 #button-lib-search:hover,
 #lib-search-btn:hover,
 #lyrics i:hover,
